# Metaprogramming

./: CMakeLists.txt  README.md
include/: factorial.hpp  fibonacci.hpp  gcd.hpp  is_power_of_two.hpp  is_prime.hpp  power_of_two.hpp
src/: main.cpp
